--- a/playing_around.ipynb
+++ b/playing_around.ipynb
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +526,7 @@
     "    \n",
     "    def __init__(self, train_X, train_Y, wordvecs=wordvectors):\n",
     "        self.train_X = train_X\n",
-    "        self.trian_Y = train_Y\n",
+    "        self.train_Y = theano.shared(np.array(train_Y, 'int32'))\n",
     "        self.wordvecs = wordvecs\n",
     "        \n",
     "        self.input_size = 10\n",
@@ -535,17 +535,18 @@
     "        self.learning_rate = .01\n",
     "        self.momentum = .9\n",
     "        \n",
+    "        self.train_X_rep = theano.shared(lasagne.utils.floatX([[self.getRep(x)] for x in self.train_X]))\n",
+    "                \n",
     "        self._setup()\n",
-    "        \n",
     "        \n",
     "    def getRep(self, sent):\n",
     "        ret = []\n",
-    "        for i in range(self.input_size):\n",
+    "        for i in xrange(self.input_size):\n",
     "            if i < len(sent):\n",
     "                ret.append(self.wordvecs[sent[i]])\n",
     "            else:\n",
     "                ret.append(np.zeros(self.wordvecs.vector_size))\n",
-    "        return np.matrix(ret)\n",
+    "        return np.matrix(ret).reshape((1, self.input_size, self.wordvecs.vector_size))\n",
     "    \n",
     "    def _setup(self):\n",
     "        self.y_batch = T.ivectors('y')\n",
@@ -572,15 +573,16 @@
     "        \n",
     "        self.output_test = lasagne.layers.get_output(self.output_l, self.x_batch, deterministic=True)\n",
     "        \n",
-    "        self.all_params = lasagne.layers.get_all_params(self.output_v)\n",
-    "        self.updates = lasagne.updates.nesterov_momentum(self.loss_train, self.all_params, \n",
+    "        self.all_params = lasagne.layers.get_all_params(self.output_l)\n",
+    "        self.updates = lasagne.updates.nesterov_momentum(self.loss_v, self.all_params, \n",
     "                                                         self.learning_rate, self.momentum)\n",
     "        \n",
     "        self.iter_train = theano.function(\n",
     "            [self.batch_index], self.loss_v,\n",
     "            updates=self.updates,\n",
     "            givens={\n",
-    "                X_batch: \n",
+    "                self.x_batch: self.train_X_rep[self.batch_slice],\n",
+    "                self.y_batch: self.train_Y[self.batch_slice]\n",
     "            }\n",
     "        )\n",
     "            \n",
@@ -589,6 +591,27 @@
     "            \n",
     "experiment = SentimentExp(sentiment.train_X, sentiment.train_Y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'TensorVariable' object has no attribute 'get_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-149-4ce9e220f4b7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mexperiment\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain_X_rep\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'TensorVariable' object has no attribute 'get_value'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -696,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
@@ -707,7 +730,7 @@
        "'provide[s] nail-biting suspense and credible characters without relying on technology-of-the-moment technique or pretentious dialogue . \\n'"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,6 +738,116 @@
    "source": [
     "sentiment.train_X[0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'module' object has no attribute 'warn'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-81-72a7f9fa6b07>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtheano\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'module' object has no attribute 'warn'"
+     ]
+    }
+   ],
+   "source": [
+    "theano."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "x.input"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TensorType(int32, vector)>"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "theano.shared(np.array(sentiment.train_Y, 'int32'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TensorType(int32, vector)>"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T.ivector()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'type' object has no attribute '__getitem__'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-142-51b9bbc86060>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mOut\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m140\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msize\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'type' object has no attribute '__getitem__'"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
