--- a/playing_around2.ipynb
+++ b/playing_around2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -41,69 +41,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "l_in = lasagne.layers.InputLayer((100,50))"
+    "l_in = lasagne.layers.InputLayer((1,50))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/init.py:86: UserWarning: The uniform initializer no longer uses Glorot et al.'s approach to determine the bounds, but defaults to the range (-0.01, 0.01) instead. Please use the new GlorotUniform initializer to get the old behavior. GlorotUniform is now the default for all layers.\n",
-      "  warnings.warn(\"The uniform initializer no longer uses Glorot et al.'s \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "l_hidden = lasagne.layers.DenseLayer(l_in, num_units=10)"
+    "l_hidden = lasagne.layers.DenseLayer(l_in, num_units=10, name='dens1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "l_out = lasagne.layers.DenseLayer(l_hidden, num_units=1)"
+    "l_out = lasagne.layers.DenseLayer(l_hidden, num_units=1, name='dens2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/lasagne/layers/helper.py:69: UserWarning: get_all_layers() has been changed to return layers in topological order. The former implementation is still available as get_all_layers_old(), but will be removed before the first release of Lasagne. To ignore this warning, use `warnings.filterwarnings('ignore', '.*topo.*')`.\n",
-      "  warnings.warn(\"get_all_layers() has been changed to return layers in \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "out = lasagne.layers.get_output(l_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -145,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -165,54 +147,216 @@
     "train = theano.function(\n",
     "    [l_in.input_var, target], loss, updates=update,\n",
     "    allow_input_downcast=True,\n",
+    "    mode='DebugMode',\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "target_v = np.random.randint(0,2,100)"
+    "fun_loss = theano.function([l_in.input_var, target],loss,mode='DebugMode')\n",
+    "#fun_out = theano.function([l_in.input_var], out, mode='DebugMode', on_unused_input='warn')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "target_t = np.random.randn(100, 50)"
+    "target_v = (np.random.randint(0,2,1) * 2 - 1).astype('int32')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_t = np.random.randn(1, 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Input dimension mis-match. (input[0].shape[1] = 100, input[1].shape[1] = 1)\nApply node that caused the error: Elemwise{Composite{((i0 * log(i1)) + (i2 * log(i3)))}}[(0, 1)](InplaceDimShuffle{x,0}.0, Elemwise{mul,no_inplace}.0, Elemwise{sub,no_inplace}.0, Elemwise{sub,no_inplace}.0)\nInputs types: [TensorType(int32, row), TensorType(float64, matrix), TensorType(float64, row), TensorType(float64, matrix)]\nInputs shapes: [(1, 100), (100, 1), (1, 100), (100, 1)]\nInputs strides: [(400, 4), (8, 8), (800, 8), (8, 8)]\nInputs values: ['not shown', 'not shown', 'not shown', 'not shown']\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node.",
+     "ename": "InvalidValueError",
+     "evalue": "InvalidValueError\n        type(variable) = TensorType(float64, matrix)\n        variable       = Elemwise{Composite{((i0 * log(Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3))) + (i4 * log((i5 - Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3)))))}}[(0, 2)].0\n        type(value)    = <type 'numpy.ndarray'>\n        dtype(value)   = float64\n        shape(value)   = (1, 1)\n        value          = [[ inf]]\n        min(value)     = inf\n        max(value)     = inf\n        isfinite       = False\n        client_node    = None\n        hint           = perform output\n        specific_hint  = non-finite elements not allowed\n        context        = ...\n  Elemwise{Composite{((i0 * log(Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3))) + (i4 * log((i5 - Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3)))))}}[(0, 2)] [@A] ''   \n   |InplaceDimShuffle{x,0} [@B] ''   \n   | |y [@C]\n   |TensorConstant{(1, 1) of 0.5} [@D]\n   |Dot22 [@E] ''   \n   | |Elemwise{Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}}[(0, 1)] [@F] ''   \n   | | |TensorConstant{(1, 1) of 0.5} [@D]\n   | | |Dot22 [@G] ''   \n   | | | |input [@H]\n   | | | |dens1.W [@I]\n   | | |InplaceDimShuffle{x,0} [@J] ''   \n   | |   |dens1.b [@K]\n   | |dens2.W [@L]\n   |InplaceDimShuffle{x,0} [@M] ''   \n   | |dens2.b [@N]\n   |Elemwise{sub,no_inplace} [@O] ''   \n   | |TensorConstant{(1, 1) of 1.0} [@P]\n   | |InplaceDimShuffle{x,0} [@B] ''   \n   |TensorConstant{(1, 1) of 1.0} [@P]\n\n        ",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-49-510454fad50e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_v\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    604\u001b[0m                         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnodes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mposition_of_error\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    605\u001b[0m                         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mthunks\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mposition_of_error\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 606\u001b[1;33m                         storage_map=self.fn.storage_map)\n\u001b[0m\u001b[0;32m    607\u001b[0m                 \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    608\u001b[0m                     \u001b[1;31m# For the c linker We don't have access from\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mInvalidValueError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-29-8403bc857a69>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfun_loss\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtarget_t\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtarget_v\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/compile/function_module.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    593\u001b[0m         \u001b[0mt0_fn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    594\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 595\u001b[1;33m             \u001b[0moutputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    596\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    597\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'position_of_error'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Input dimension mis-match. (input[0].shape[1] = 100, input[1].shape[1] = 1)\nApply node that caused the error: Elemwise{Composite{((i0 * log(i1)) + (i2 * log(i3)))}}[(0, 1)](InplaceDimShuffle{x,0}.0, Elemwise{mul,no_inplace}.0, Elemwise{sub,no_inplace}.0, Elemwise{sub,no_inplace}.0)\nInputs types: [TensorType(int32, row), TensorType(float64, matrix), TensorType(float64, row), TensorType(float64, matrix)]\nInputs shapes: [(1, 100), (100, 1), (1, 100), (100, 1)]\nInputs strides: [(400, 4), (8, 8), (800, 8), (8, 8)]\nInputs values: ['not shown', 'not shown', 'not shown', 'not shown']\n\nHINT: Re-running with most Theano optimization disabled could give you a back-trace of when this node was created. This can be done with by setting the Theano flag 'optimizer=fast_compile'. If that does not work, Theano optimizations can be disabled with 'optimizer=None'.\nHINT: Use the Theano flag 'exception_verbosity=high' for a debugprint and storage map footprint of this apply node."
+      "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/compile/debugmode.pyc\u001b[0m in \u001b[0;36mdeco\u001b[1;34m()\u001b[0m\n\u001b[0;32m   2149\u001b[0m                 \u001b[0mTensorType\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter_checks_isfinite\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmaker\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcheck_isfinite\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2150\u001b[0m                 \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2151\u001b[1;33m                     \u001b[1;32mreturn\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2152\u001b[0m                 \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2153\u001b[0m                     \u001b[1;31m# put back the filter_checks_isfinite\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/matthew/.virtualenvs/nlp-convnet/lib/python2.7/site-packages/theano/compile/debugmode.pyc\u001b[0m in \u001b[0;36mf\u001b[1;34m()\u001b[0m\n\u001b[0;32m   1905\u001b[0m                                 raise InvalidValueError(r, storage_map[r][0],\n\u001b[0;32m   1906\u001b[0m                                                         \u001b[0mhint\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'perform output'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1907\u001b[1;33m                                                         specific_hint=hint2)\n\u001b[0m\u001b[0;32m   1908\u001b[0m                         py_inplace_outs = _check_inputs(\n\u001b[0;32m   1909\u001b[0m                                 \u001b[0mnode\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstorage_map\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr_vals\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdr_vals\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mInvalidValueError\u001b[0m: InvalidValueError\n        type(variable) = TensorType(float64, matrix)\n        variable       = Elemwise{Composite{((i0 * log(Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3))) + (i4 * log((i5 - Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3)))))}}[(0, 2)].0\n        type(value)    = <type 'numpy.ndarray'>\n        dtype(value)   = float64\n        shape(value)   = (1, 1)\n        value          = [[ inf]]\n        min(value)     = inf\n        max(value)     = inf\n        isfinite       = False\n        client_node    = None\n        hint           = perform output\n        specific_hint  = non-finite elements not allowed\n        context        = ...\n  Elemwise{Composite{((i0 * log(Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3))) + (i4 * log((i5 - Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3)))))}}[(0, 2)] [@A] ''   \n   |InplaceDimShuffle{x,0} [@B] ''   \n   | |y [@C]\n   |TensorConstant{(1, 1) of 0.5} [@D]\n   |Dot22 [@E] ''   \n   | |Elemwise{Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}}[(0, 1)] [@F] ''   \n   | | |TensorConstant{(1, 1) of 0.5} [@D]\n   | | |Dot22 [@G] ''   \n   | | | |input [@H]\n   | | | |dens1.W [@I]\n   | | |InplaceDimShuffle{x,0} [@J] ''   \n   | |   |dens1.b [@K]\n   | |dens2.W [@L]\n   |InplaceDimShuffle{x,0} [@M] ''   \n   | |dens2.b [@N]\n   |Elemwise{sub,no_inplace} [@O] ''   \n   | |TensorConstant{(1, 1) of 1.0} [@P]\n   | |InplaceDimShuffle{x,0} [@B] ''   \n   |TensorConstant{(1, 1) of 1.0} [@P]\n\n        "
      ]
     }
    ],
    "source": [
+    "fun_loss(target_t, target_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elemwise{Composite{(((-i0) / i1) / i2)}}[(0, 0)] [@A] ''   15\n",
+      " |Sum{acc_dtype=float64} [@B] ''   14\n",
+      " | |Elemwise{Composite{((i0 * log(Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3))) + (i4 * log((i5 - Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}(i1, i2, i3)))))}}[(0, 2)] [@C] ''   13\n",
+      " |   |InplaceDimShuffle{x,0} [@D] ''   1\n",
+      " |   | |y [@E]\n",
+      " |   |TensorConstant{(1, 1) of 0.5} [@F]\n",
+      " |   |Dot22 [@G] ''   10\n",
+      " |   | |Elemwise{Composite{(i0 * (Abs((i1 + i2)) + i1 + i2))}}[(0, 1)] [@H] ''   8\n",
+      " |   | | |TensorConstant{(1, 1) of 0.5} [@F]\n",
+      " |   | | |Dot22 [@I] ''   5\n",
+      " |   | | | |input [@J]\n",
+      " |   | | | |dens1.W [@K]\n",
+      " |   | | |InplaceDimShuffle{x,0} [@L] ''   4\n",
+      " |   | |   |dens1.b [@M]\n",
+      " |   | |dens2.W [@N]\n",
+      " |   |InplaceDimShuffle{x,0} [@O] ''   3\n",
+      " |   | |dens2.b [@P]\n",
+      " |   |Elemwise{sub,no_inplace} [@Q] ''   6\n",
+      " |   | |TensorConstant{(1, 1) of 1.0} [@R]\n",
+      " |   | |InplaceDimShuffle{x,0} [@D] ''   1\n",
+      " |   |TensorConstant{(1, 1) of 1.0} [@R]\n",
+      " |Subtensor{int64} [@S] ''   12\n",
+      " | |Elemwise{Cast{float64}} [@T] ''   9\n",
+      " | | |MakeVector [@U] ''   7\n",
+      " | |   |Shape_i{0} [@V] ''   2\n",
+      " | |   | |input [@J]\n",
+      " | |   |Shape_i{0} [@W] ''   0\n",
+      " | |     |y [@E]\n",
+      " | |Constant{0} [@X]\n",
+      " |Subtensor{int64} [@Y] ''   11\n",
+      "   |Elemwise{Cast{float64}} [@T] ''   9\n",
+      "   |Constant{1} [@Z]\n"
+     ]
+    }
+   ],
+   "source": [
+    "theano.printing.debugprint(fun_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "train(target_t, target_v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "eval_v = {l_in.input_var: target_t, target: target_v}\n",
+    "l_out.input_shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "[(a.shape.eval(), a) for a in all_params]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_v.shape, target_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "target_t.dot(all_params[0].get_value()).dot(all_params[2].get_value()) > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theano.printing.debugprint(train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theano.config.DebugMode."
    ]
   },
   {
