results from earlier run

--- a/sentiment_exp1.ipynb
+++ b/sentiment_exp1.ipynb
@@ -270,9 +270,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.65781617586048158, 0.4033997655334115) (0.65864224859370946, 0.4033997655334115)\n",
+      "(0.65284003624535103, 0.39214536928487692) (0.65007462346657308, 0.38065650644783117)\n",
+      "(0.64309654065091437, 0.37409144196951932) (0.64461577900407996, 0.37268464243845251)\n",
+      "(0.63415913546176195, 0.36354044548651815) (0.63584843480132358, 0.36318874560375147)\n",
+      "(0.62133706366877117, 0.35252051582649474) (0.61819202019044595, 0.35076201641266119)\n",
+      "(0.61186462088244442, 0.34138335287221572) (0.61136543486472883, 0.3399765533411489)\n",
+      "(0.60211213987674261, 0.33024618991793669) (0.60446660743327818, 0.33259085580304809)\n",
+      "(0.58853938584680199, 0.31254396248534583) (0.59016738084616105, 0.32051582649472449)\n",
+      "(0.57889038805932092, 0.30996483001172331) (0.58027425585488246, 0.31359906213364597)\n",
+      "(0.56627723388382178, 0.29683470105509963) (0.56742439470765882, 0.30386869871043376)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a in xrange(10):\n",
+    "    for i in xrange(30):\n",
+    "        experiment.train()\n",
+    "    print experiment.test_loss(sentiment.train_X, sentiment.train_Y), experiment.test_loss(sentiment.test_X, sentiment.test_Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -302,11 +333,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array(0.512237808911631),\n",
+       " array([ 0.58180769,  0.2986674 ,  0.01005034,  0.30346001,  0.97740184,\n",
+       "         0.92071332,  0.36261844,  0.52049098,  0.31382833,  0.83333974]),\n",
+       " array([[ 0.55888716],\n",
+       "        [ 0.74180609],\n",
+       "        [-0.02160361],\n",
+       "        [ 0.73825941],\n",
+       "        [ 0.62371252],\n",
+       "        [ 0.60176513],\n",
+       "        [ 0.69585189],\n",
+       "        [ 0.59422872],\n",
+       "        [ 0.73064444],\n",
+       "        [ 0.43459542]]),\n",
+       " array([[-0.1001953 ],\n",
+       "        [-0.05368159],\n",
+       "        [-0.13112429],\n",
+       "        [-0.29577643],\n",
+       "        [ 0.11312037],\n",
+       "        [-0.16495259],\n",
+       "        [-0.09471503],\n",
+       "        [-0.31290631],\n",
+       "        [-0.02202011],\n",
+       "        [-0.04184033],\n",
+       "        [ 0.33743156],\n",
+       "        [ 0.0953935 ],\n",
+       "        [ 0.37693405],\n",
+       "        [-0.1261617 ],\n",
+       "        [-0.31001282],\n",
+       "        [-0.09407441],\n",
+       "        [-0.01603207],\n",
+       "        [ 0.03523483],\n",
+       "        [-0.28481946],\n",
+       "        [ 0.28543564],\n",
+       "        [ 0.03463661],\n",
+       "        [ 0.09321152],\n",
+       "        [ 0.53869045],\n",
+       "        [ 0.54057898],\n",
+       "        [ 0.19591136],\n",
+       "        [ 0.10608613],\n",
+       "        [-0.06206725],\n",
+       "        [ 0.75469908],\n",
+       "        [ 0.40794675],\n",
+       "        [-0.33006513],\n",
+       "        [-0.05392863],\n",
+       "        [ 0.0120901 ],\n",
+       "        [ 0.26725183],\n",
+       "        [ 0.07622103],\n",
+       "        [-0.26185877],\n",
+       "        [-0.18341788],\n",
+       "        [-0.20857736],\n",
+       "        [-0.16111269],\n",
+       "        [ 0.16760234],\n",
+       "        [-0.12767818],\n",
+       "        [ 0.08177532],\n",
+       "        [ 0.08238657],\n",
+       "        [-0.20998697],\n",
+       "        [ 0.08814245],\n",
+       "        [-0.34431877],\n",
+       "        [ 0.05732444],\n",
+       "        [-0.05542198],\n",
+       "        [ 0.65578781],\n",
+       "        [-0.19639453],\n",
+       "        [ 0.13576821]]),\n",
+       " array([[-0.06899973],\n",
+       "        [-0.10581331],\n",
+       "        [ 0.05537106],\n",
+       "        [-0.06183905],\n",
+       "        [-0.06940733],\n",
+       "        [-0.08401966],\n",
+       "        [ 0.06789562],\n",
+       "        [-0.07303723],\n",
+       "        [-0.03875243],\n",
+       "        [-0.12476217],\n",
+       "        [-0.05222287],\n",
+       "        [ 0.05933965],\n",
+       "        [-0.07029432],\n",
+       "        [ 0.05573864],\n",
+       "        [-0.0344918 ],\n",
+       "        [ 0.05102806],\n",
+       "        [ 0.06188749],\n",
+       "        [-0.09443296],\n",
+       "        [ 0.07689063],\n",
+       "        [-0.07822788],\n",
+       "        [ 0.07853906],\n",
+       "        [ 0.08751604],\n",
+       "        [-0.04782302],\n",
+       "        [-0.05697691],\n",
+       "        [-0.05813   ],\n",
+       "        [ 0.10818347],\n",
+       "        [-0.05698897],\n",
+       "        [-0.05847661],\n",
+       "        [-0.05371098],\n",
+       "        [ 0.06913483],\n",
+       "        [-0.06115504],\n",
+       "        [-0.06156155],\n",
+       "        [-0.07971827],\n",
+       "        [-0.08016819],\n",
+       "        [ 0.06899803],\n",
+       "        [ 0.06064925],\n",
+       "        [ 0.05711848],\n",
+       "        [ 0.03316941],\n",
+       "        [ 0.04328091],\n",
+       "        [-0.05714878],\n",
+       "        [ 0.04716154],\n",
+       "        [-0.05013402],\n",
+       "        [ 0.06555512],\n",
+       "        [ 0.0747276 ],\n",
+       "        [ 0.05935291],\n",
+       "        [ 0.0435267 ],\n",
+       "        [ 0.06793583],\n",
+       "        [ 0.06635798],\n",
+       "        [ 0.07450909],\n",
+       "        [-0.07913106]]),\n",
+       " array([1, 1, 0, 1, 0, 0, 1, 1, 1, 1], dtype=int32)]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_func(np.array(experiment.train_X_rep[0:10]),np.array(experiment.train_Y[0:10]).astype('int32'))"
    ]
